trunk/Archive2/85/80452facd29bc0/output
main.cpp:22:1: error: expected unqualified-id before numeric constant
 5
 ^
